feat: finished JS with html lesson

--- a/ProgrammingLanguages/Javascript/LearnJS_HTML/index.css
+++ b/ProgrammingLanguages/Javascript/LearnJS_HTML/index.css
@@ -28,7 +28,7 @@ button {
     margin-bottom: 10px;
 }
 
-/*Getting html id from #special tag*/
+/*Getting html id called "special*/
 #special {
     color: rgb(218, 185, 80);
     font-size: large;
